--- a/arch/arm/configs/tsimx6ul_defconfig
+++ b/arch/arm/configs/tsimx6ul_defconfig
@@ -746,6 +746,7 @@ CONFIG_FB_MXC_DCIC=m
 CONFIG_HANNSTAR_CABC=y
 CONFIG_FB_MXC_EINK_PANEL=y
 CONFIG_FB_MXC_EINK_V2_PANEL=y
+CONFIG_FB_SSD1307_SPI=m
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_LCD_L4F00242T03=y
 CONFIG_LCD_PLATFORM=y
@@ -926,7 +927,6 @@ CONFIG_IMX7D_ADC=y
 CONFIG_VF610_ADC=y
 CONFIG_INV_MPU6050_IIO=m
 CONFIG_AK8975=m
-CONFIG_PWM=y
 CONFIG_PWM_IMX=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
