--- a/arch/arm/configs/ts4900_defconfig
+++ b/arch/arm/configs/ts4900_defconfig
@@ -1438,7 +1438,8 @@ CONFIG_USBIP_CORE=m
 CONFIG_USBIP_VHCI_HCD=m
 CONFIG_USBIP_HOST=m
 CONFIG_USB_MUSB_HDRC=m
-CONFIG_USB_CHIPIDEA=m
+CONFIG_USB_CHIPIDEA=y
+CONFIG_USB_CHIPIDEA_UDC=y
 CONFIG_USB_CHIPIDEA_HOST=y
 CONFIG_USB_SERIAL=m
 CONFIG_USB_SERIAL_GENERIC=y
@@ -1535,7 +1536,7 @@ CONFIG_USB_UEAGLEATM=m
 CONFIG_USB_XUSBATM=m
 CONFIG_NOP_USB_XCEIV=m
 CONFIG_USB_MXS_PHY=y
-CONFIG_USB_GADGET=m
+CONFIG_USB_GADGET=y
 CONFIG_USB_FSL_USB2=m
 CONFIG_USB_CONFIGFS=m
 CONFIG_USB_CONFIGFS_SERIAL=y
@@ -1632,7 +1633,6 @@ CONFIG_VT6655=m
 CONFIG_STAGING_MEDIA=y
 CONFIG_COMMON_CLK_PWM=y
 # CONFIG_IOMMU_SUPPORT is not set
-CONFIG_EXTCON=y
 CONFIG_EXTCON_ADC_JACK=m
 CONFIG_EXTCON_GPIO=m
 CONFIG_EXTCON_USB_GPIO=m
