Revert "tsimx6ul_defconfig: Move to using the new wilc driver as a module"
This reverts commit abaeafbea368c59985c02a68e407434ecf46bffe.

TS-7553-V2 stock image is not set up for the new driver, drivers
are incompatible with being built at the same time as modules.

--- a/arch/arm/configs/tsimx6ul_defconfig
+++ b/arch/arm/configs/tsimx6ul_defconfig
@@ -544,7 +544,9 @@ CONFIG_ZD1211RW=m
 CONFIG_RSI_91X=m
 # CONFIG_RSI_DEBUGFS is not set
 # CONFIG_RSI_SDIO is not set
-CONFIG_WILC_SPI=m
+CONFIG_ATMEL_SMARTCONNECT=y
+CONFIG_WILC3000=m
+CONFIG_WILC3000_SPI=y
 CONFIG_INPUT_POLLDEV=y
 # CONFIG_INPUT_MOUSEDEV_PSAUX is not set
 CONFIG_INPUT_JOYDEV=m
