--- a/arch/arm/boot/dts/imx6dl-ts4900-reve-15.dts
+++ b/arch/arm/boot/dts/imx6dl-ts4900-reve-15.dts
@@ -41,11 +41,11 @@
 
 /dts-v1/;
 #include "imx6dl.dtsi"
-#include "imx6qdl-ts4900.dtsi"
-#include "imx6qdl-ts4900-2d.dtsi"
+#include "imx6qdl-ts4900-reve.dtsi"
+#include "imx6qdl-ts4900-ts9550.dtsi"
 
 / {
-	model = "Technologic Systems i.MX6 Solo/DualLite TS-4900 (0x2d)";
+	model = "Technologic Systems i.MX6 Solo/DualLite TS-4900 (TS-9550)";
 	compatible = "fsl,imx6dl-ts4900", "fsl,imx6dl";
 };
 
