--- a/arch/arm/boot/dts/imx6dl-ts4900-reve-2d.dts
+++ b/arch/arm/boot/dts/imx6dl-ts4900-reve-2d.dts
@@ -41,7 +41,7 @@
 
 /dts-v1/;
 #include "imx6dl.dtsi"
-#include "imx6qdl-ts4900.dtsi"
+#include "imx6qdl-ts4900-reve.dtsi"
 #include "imx6qdl-ts4900-2d.dtsi"
 
 / {
