--- a/arch/arm/boot/dts/imx6q-ts4900-reve-2d.dts
+++ b/arch/arm/boot/dts/imx6q-ts4900-reve-2d.dts
@@ -40,15 +40,11 @@
  */
 
 /dts-v1/;
-#include "imx6dl.dtsi"
-#include "imx6qdl-ts4900.dtsi"
+#include "imx6q.dtsi"
+#include "imx6qdl-ts4900-reve.dtsi"
 #include "imx6qdl-ts4900-2d.dtsi"
 
 / {
-	model = "Technologic Systems i.MX6 Solo/DualLite TS-4900 (0x2d)";
-	compatible = "fsl,imx6dl-ts4900", "fsl,imx6dl";
-};
-
-&epdc {
-	status = "disabled";
+	model = "Technologic Systems i.MX6 Quad TS-4900 (0x2d)";
+	compatible = "fsl,imx6q-ts4900", "fsl,imx6q";
 };
