--- a/arch/arm/configs/ts4900_defconfig
+++ b/arch/arm/configs/ts4900_defconfig
@@ -546,6 +546,7 @@ CONFIG_BT_HCIVHCI=m
 CONFIG_BT_MRVL=m
 CONFIG_BT_ATH3K=m
 CONFIG_CFG80211=m
+CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_CERTIFICATION_ONUS=y
 CONFIG_CFG80211_REG_CELLULAR_HINTS=y
 CONFIG_CFG80211_REG_RELAX_NO_IR=y
