ts7970: ts8950: Added missing v4l_output for video playback

--- a/arch/arm/boot/dts/imx6qdl-ts7970.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts7970.dtsi
@@ -168,6 +168,11 @@
 		mux-int-port = <1>;
 		ssi-controller = <&ssi1>;
 	};
+
+	v4l2_out {
+		compatible = "fsl,mxc_v4l2_output";
+		status = "okay";
+	};
 };
 
 &audmux {
