--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -366,6 +366,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6dl-ts4900-reve-15.dtb \
 	imx6dl-ts4900-reve-2d.dtb \
 	imx6dl-ts7970.dtb \
+	imx6dl-ts7970-revf.dtb \
 	imx6dl-ts7990-lxd-revb.dtb \
 	imx6dl-ts7990-lxd.dtb \
 	imx6dl-ts7990-microtips-revb.dtb \
@@ -450,6 +451,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6q-ts4900-reve-15.dtb \
 	imx6q-ts4900-reve-2d.dtb \
 	imx6q-ts7970.dtb \
+	imx6q-ts7970-revf.dtb \
 	imx6q-ts7990-lxd-revb.dtb \
 	imx6q-ts7990-lxd.dtb \
 	imx6q-ts7990-microtips-revb.dtb \
