--- a/arch/arm/configs/ts4900_defconfig
+++ b/arch/arm/configs/ts4900_defconfig
@@ -577,7 +577,7 @@ CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_STANDALONE is not set
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 CONFIG_DMA_CMA=y
-CONFIG_CMA_SIZE_MBYTES=128
+CONFIG_CMA_SIZE_MBYTES=320
 CONFIG_ARM_CCI400_PMU=y
 CONFIG_IMX_WEIM=y
 CONFIG_CONNECTOR=y
@@ -1259,11 +1259,18 @@ CONFIG_DVB_DDBRIDGE=m
 CONFIG_DVB_SMIPCIE=m
 CONFIG_DVB_NETUP_UNIDVB=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_VIDEO_MXC_OUTPUT=y
 CONFIG_VIDEO_MXC_CAPTURE=m
+CONFIG_MXC_TVIN_ADV7180=m
 CONFIG_MXC_IPU_DEVICE_QUEUE_SDC=m
-CONFIG_VIDEO_MXC_PXP_V4L2=m
+CONFIG_VIDEO_MXC_IPU_OUTPUT=y
+CONFIG_VIDEO_MXC_PXP_V4L2=y
 CONFIG_VIDEO_MXC_CSI_CAMERA=m
 CONFIG_MXC_VADC=m
+CONFIG_SOC_CAMERA=y
+CONFIG_V4L_MEM2MEM_DRIVERS=y
+CONFIG_VIDEO_CODA=y
+CONFIG_VIDEO_MEM2MEM_DEINTERLACE=y
 CONFIG_RADIO_SI4713=m
 CONFIG_USB_SI4713=m
 CONFIG_PLATFORM_SI4713=m
@@ -1279,6 +1286,7 @@ CONFIG_USB_MA901=m
 CONFIG_RADIO_TEA5764=m
 CONFIG_RADIO_SAA7706H=m
 CONFIG_RADIO_TEF6862=m
+CONFIG_SOC_CAMERA_OV2640=y
 CONFIG_DRM=y
 CONFIG_DRM_VIVANTE=y
 CONFIG_DRM_SII902X=m
@@ -1294,7 +1302,10 @@ CONFIG_FB_MXC_TRULY_PANEL_TFT3P5079E=y
 CONFIG_FB_MXC_TRULY_PANEL_TFT3P5581E=y
 CONFIG_FB_MXC_LDB=y
 CONFIG_FB_MXC_HDMI=y
-CONFIG_FB_MXC_DCIC=y
+CONFIG_FB_MXS_SII902X=y
+CONFIG_FB_MXC_DCIC=m
+CONFIG_FB_MXC_EINK_PANEL=y
+CONFIG_FB_MXC_EINK_V2_PANEL=y
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_LCD_PLATFORM=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
@@ -1572,8 +1583,9 @@ CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_ESDHC_IMX=y
 CONFIG_MXC_IPU=y
 CONFIG_MXC_IPU_V3_PRE=y
-CONFIG_MXC_GPU_VIV=y
 CONFIG_MXC_SIM=y
+CONFIG_MXC_MIPI_CSI2=y
+CONFIG_MXC_HDMI_CEC=m
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_SYSCON=y
@@ -1614,6 +1626,8 @@ CONFIG_RTL8192E=m
 CONFIG_R8712U=m
 CONFIG_R8188EU=m
 CONFIG_RTS5208=m
+CONFIG_VT6655=m
+CONFIG_STAGING_MEDIA=y
 CONFIG_COMMON_CLK_PWM=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_EXTCON=y
@@ -1669,7 +1683,7 @@ CONFIG_ZISOFS=y
 CONFIG_UDF_FS=m
 CONFIG_MSDOS_FS=m
 CONFIG_VFAT_FS=y
-CONFIG_NTFS_FS=y
+CONFIG_NTFS_FS=m
 CONFIG_NTFS_RW=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
