ARM: tsimx6ul: Use new wilc_spi driver

--- a/arch/arm/configs/tsimx6ul_defconfig
+++ b/arch/arm/configs/tsimx6ul_defconfig
@@ -544,9 +544,7 @@ CONFIG_ZD1211RW=m
 CONFIG_RSI_91X=m
 # CONFIG_RSI_DEBUGFS is not set
 # CONFIG_RSI_SDIO is not set
-CONFIG_ATMEL_SMARTCONNECT=y
-CONFIG_WILC3000=m
-CONFIG_WILC3000_SPI=y
+CONFIG_WILC_SPI=m
 CONFIG_INPUT_POLLDEV=y
 # CONFIG_INPUT_MOUSEDEV_PSAUX is not set
 CONFIG_INPUT_JOYDEV=m
@@ -1013,7 +1011,6 @@ CONFIG_CRYPTO_DEV_FSL_CAAM_SM_TEST=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_SECVIO=y
 CONFIG_CRYPTO_DEV_MXS_DCP=y
 CONFIG_CRC_T10DIF=y
-CONFIG_CRC7=m
 CONFIG_LIBCRC32C=y
 CONFIG_FONTS=y
 CONFIG_FONT_8x8=y
