--- a/arch/arm/boot/dts/imx6q-ts4900.dts
+++ b/arch/arm/boot/dts/imx6q-ts4900.dts
@@ -15,7 +15,7 @@
 #include "imx6qdl-ts4900.dtsi"
 
 / {
-	model = "Technologic Systems i.MX6 Quad TS-4900 (Default Device Tree)";
+	model = "embeddedTS i.MX6 Quad TS-4900 (Default Device Tree)";
 	compatible = "fsl,imx6q-ts4900", "fsl,imx6q";
 };
 
