--- a/arch/arm/boot/dts/imx6ul-ts718A.dts
+++ b/arch/arm/boot/dts/imx6ul-ts718A.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016 Technologic Systems
+ * Copyright (C) 2016-2022 Technologic Systems, Inc. dba embeddedTS
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -11,8 +11,8 @@
 #include "imx6ul.dtsi"
 
 / {
-	model = "Technologic Systems i.MX6ul TS-Andium";
-	compatible = "technologic,ts7180", "fsl,imx6ul";
+	model = "embeddedTS i.MX6ul TS-Andium";
+	compatible = "embeddedts,ts7180", "fsl,imx6ul";
 
 	chosen {
 		stdout-path = &uart1;
@@ -350,7 +350,7 @@
 	sda-gpios = <&gpio3 5 GPIO_ACTIVE_HIGH>;
 
 	gpio6: gpio@28 {
-		compatible = "technologic,ts7970-gpio";
+		compatible = "embeddedts,ts7970-gpio";
 		reg = <0x28>;
 		#gpio-cells = <2>;
 		gpio-controller;
