--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -421,7 +421,7 @@ config GPIO_TS5500
 	depends on TS5500 || COMPILE_TEST
 	help
 	  This driver supports Digital I/O exposed by pin blocks found on some
-	  Technologic Systems platforms. It includes, but is not limited to, 3
+	  embeddedTS platforms. It includes, but is not limited to, 3
 	  blocks of the TS-5500: DIO1, DIO2 and the LCD port, and the TS-5600
 	  LCD port.
 
@@ -511,10 +511,10 @@ config GPIO_ZYNQ
 	  Say yes here to support Xilinx Zynq GPIO controller.
 
 config GPIO_TS7120
-	bool "Technologic Systems FPGA GPIO"
+	bool "embeddedTS FPGA GPIO"
 	depends on IMX_WEIM
 	help
-	  Say yes here to enable the GPIO driver for Technologic's FPGA core.
+	  Say yes here to enable the GPIO driver for embeddedTS's FPGA core.
 	  Supports TS-7120 only.  It requires the driver to be built in the
 	  kernel.
 
@@ -656,10 +656,10 @@ config GPIO_SX150X
 	  16 bits: sx1509q
 
 config GPIO_TS4900
-	tristate "Technologic Systems FPGA I2C GPIO"
+	tristate "embeddedTS FPGA I2C GPIO"
 	select REGMAP_I2C
 	help
-	  Say yes here to enabled the GPIO driver for Technologic's FPGA core.
+	  Say yes here to enabled the GPIO driver for embeddedTS's FPGA core.
 	  Series supported include TS-4100, TS-4900, TS-7970 and TS-7990.
 
 
