--- a/drivers/misc/ts-fpga/Kconfig
+++ b/drivers/misc/ts-fpga/Kconfig
@@ -5,7 +5,7 @@ config TS7120_FPGA
 	depends on m
 	default n
 	help
-	  Select this option if you have a Technologic Systems TS-7120 SBC.
+	  Select this option if you have a embeddedTS TS-7120 SBC.
 	  The driver is necessary if you want to use the devices that are
 	  present on that board's FPGA.
 
