--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -421,7 +421,7 @@ config GPIO_TS5500
 	depends on TS5500 || COMPILE_TEST
 	help
 	  This driver supports Digital I/O exposed by pin blocks found on some
-	  Technologic Systems platforms. It includes, but is not limited to, 3
+	  embeddedTS platforms. It includes, but is not limited to, 3
 	  blocks of the TS-5500: DIO1, DIO2 and the LCD port, and the TS-5600
 	  LCD port.
 
