--- a/arch/arm/boot/dts/imx6q-ts7970-revf.dts
+++ b/arch/arm/boot/dts/imx6q-ts7970-revf.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright 2015 Technologic Systems
+ * Copyright 2015-2022 Technologic Systems, Inc. dba embeddedTS
  * Copyright 2017 Savoir-faire Linux
  *
  * This file is dual-licensed: you can use it either under the terms
@@ -45,8 +45,8 @@
 #include "imx6qdl-ts7970-revf.dtsi"
 
 / {
-	model = "Technologic Systems i.MX6 Quad TS-7970 (Default Device Tree)";
-	compatible = "technologic,imx6q-ts7970", "fsl,imx6q";
+	model = "embeddedTS i.MX6 Quad TS-7970 (Default Device Tree)";
+	compatible = "embeddedts,imx6q-ts7970", "fsl,imx6q";
 
 	/* Will be filled by the bootloader */
 	memory@10000000 {
