--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -421,7 +421,7 @@ config GPIO_TS5500
 	depends on TS5500 || COMPILE_TEST
 	help
 	  This driver supports Digital I/O exposed by pin blocks found on some
-	  Technologic Systems platforms. It includes, but is not limited to, 3
+	  embeddedTS platforms. It includes, but is not limited to, 3
 	  blocks of the TS-5500: DIO1, DIO2 and the LCD port, and the TS-5600
 	  LCD port.
 
@@ -648,11 +648,11 @@ config GPIO_SX150X
 	  16 bits: sx1509q
 
 config GPIO_TS4900
-	tristate "Technologic Systems FPGA I2C GPIO"
+	tristate "embeddedTS FPGA I2C GPIO"
 	depends on SOC_IMX6 || COMPILE_TEST
 	select REGMAP_I2C
 	help
-	  Say yes here to enabled the GPIO driver for Technologic's FPGA core.
+	  Say yes here to enabled the GPIO driver for embeddedTS's FPGA core.
 	  Series supported include TS-4100, TS-4900, TS-7970 and TS-7990.
 
 endmenu
