arm: dts: ts4900: ts7970: Added RTC flags to set temperature sensing every minute, and set voltage thresholds for low battery warnings

--- a/arch/arm/boot/dts/imx6qdl-ts4900.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts4900.dtsi
@@ -159,6 +159,9 @@
 	isl12022: rtc@6f {
 		compatible = "isil,isl12022";
 		reg = <0x6f>;
+		tse-minutes = <1>;
+		vb75 = <2>; /* 2.25V */
+		vb85 = <2>; /* 2.55V */
 	};
 
 	gpio8: gpio@28 {
