--- a/arch/arm/boot/dts/imx6qdl-ts7970-revf.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts7970-revf.dtsi
@@ -281,6 +281,9 @@
 	isl12022: rtc@6f {
 		compatible = "isl,isl12022";
 		reg = <0x6f>;
+		tse-minutes = <1>;
+		vb75 = <2>; /* 2.25V */
+		vb85 = <2>; /* 2.55V */
 	};
 
 	gpio8: gpio@28 {
