dts: imx6qdl-ts7990: Add support for Rev. E
Adds support for new accelerometer/gyroscope/magnetometer.

--- a/arch/arm/boot/dts/imx6qdl-ts7990.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts7990.dtsi
@@ -333,6 +333,13 @@
 		status="disabled";
 	};
 
+	/* Only present on REV E and above */
+	magnet: magnetometer@1e {
+		compatible = "st,lis2mdl_magn";
+		reg = <0x1e>;
+		st,module_id = <1>;
+	};
+
 	rtc: m41t00s@68 {
 		compatible = "m41t00";
 		reg = <0x68>;
@@ -348,6 +355,7 @@
 		VDDIO-supply = <&reg_3p3v>;
 	};
 
+	/* Only present on REV D and below */
 	mma8451@1c {
 		compatible = "fsl,mma8451";
 		reg = <0x1c>;
@@ -357,6 +365,24 @@
 		interrupt-parent = <&gpio2>;
 		interrupts = <23 8>;
 		interrupt-route = <1>;
+	};
+
+	ism330dlc-imu@0 {
+		compatible = "st,ism330dlc";
+		reg = <0x6a>;
+		interrupt-parent = <&gpio3>;
+		interrupts = <15 IRQ_TYPE_LEVEL_HIGH>;
+		st,module_id = <5>;
+		st,drdy-int-pin = <1>;
+	};
+
+	/* Only present on REV E and above */
+	ism330: gyro@6a {
+		compatible = "st,ism330dlc";
+		reg = <0x6a>;
+		st,drdy-int-pin = <1>;
+		interrupt-parent = <&gpio3>;
+		interrupts = <15 IRQ_TYPE_LEVEL_HIGH>;
 	};
 
 	gpio8: gpio@28 {
@@ -487,6 +513,8 @@
 				MX6QDL_PAD_EIM_CS0__GPIO2_IO23		0x17059 /* ACCEL_INT */
 				MX6QDL_PAD_EIM_DA15__GPIO3_IO15		0x17059 /* ACCEL_2_INT */
 				MX6QDL_PAD_GPIO_9__GPIO1_IO09		0x88 /* TOUCH_RESET */
+				MX6QDL_PAD_EIM_CS0__GPIO2_IO23		0x17059 /* MAGNET_IRQ */
+				MX6QDL_PAD_EIM_DA15__GPIO3_IO15		0x17059 /* GYRO_IRQ */
 			>;
 		};
 
