--- a/arch/arm/configs/ts4900_defconfig
+++ b/arch/arm/configs/ts4900_defconfig
@@ -1636,11 +1636,12 @@ CONFIG_COMMON_CLK_PWM=y
 CONFIG_EXTCON_ADC_JACK=m
 CONFIG_EXTCON_GPIO=m
 CONFIG_EXTCON_USB_GPIO=m
-CONFIG_IIO_BUFFER=y
 CONFIG_IIO_BUFFER_CB=m
-CONFIG_IIO_KFIFO_BUF=m
 CONFIG_IIO_SW_DEVICE=m
 CONFIG_IIO_SW_TRIGGER=m
+CONFIG_IIO_STM=m
+CONFIG_ST_ISM330DLC_IIO=m
+CONFIG_ST_MAG40_IIO=m
 CONFIG_PWM=y
 CONFIG_PWM_IMX=y
 CONFIG_NVMEM_IMX_OCOTP=y
